# tools

./: README.md  pyproject.toml
archive/: .coverage  pyproject.toml
archive/archive/: __init__.py  cli.py
archive/temp/: archive.yml
archive/tests/: test_cli_add.py  test_cli_archive.py  test_cli_init.py  test_cli_remote.py  test_integration.py  test_utils.py
dss/: README.md  pyproject.toml
dss/dss/: __init__.py  cli.py
dss/tests/: __init__.py  conftest.py  test_cli_add.py  test_cli_archive.py  test_cli_init.py  test_cli_remote.py  test_integration.py  test_utils.py
ptools/: README.md  cli.py
ptools/ptools/: __init__.py  cli.py
ptools/tests/: test_cli.py
record/: .gitignore  pyproject.toml
record/pyrecord/: __init__.py  cli.py  formant.py  recorder.py  transcribe.py
transcribe/: .gitignore  README.md  transcribe.swift
yt/: pyproject.toml
yt/data/: template.html
yt/yt/: __init__.py  call_api.py  cli.py  rfrance.py
